Fixed change product image z-index

--- a/style.css
+++ b/style.css
@@ -604,14 +604,14 @@ transform: rotate(315deg);
     height: 0;
     padding: 0;
     margin: 0;
-    z-index: 222;
+    z-index: 1;
 }
 .product-image-container .active img {
     display: block;   
     position: relative;
     width: calc(30vw - 4px);
     max-width: 1720px;  
-    z-index: 222;
+    z-index: 1;
 }
 .product-image-container .passive {
     display: block;   
